--- a/Frugl/Frugl/Views/BudgetGoals/BudgetGoals.storyboard
+++ b/Frugl/Frugl/Views/BudgetGoals/BudgetGoals.storyboard
@@ -80,18 +80,17 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Budget Name)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZ2-sf-KYJ">
                                                             <rect key="frame" x="57.666666666666664" y="0.0" width="121.66666666666669" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(Amount)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MaS-4q-s6t">
                                                             <rect key="frame" x="187.33333333333337" y="0.0" width="133.66666666666663" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
+                                            <color key="backgroundColor" systemColor="systemGray6Color"/>
                                             <constraints>
                                                 <constraint firstItem="JPN-hx-TT8" firstAttribute="top" secondItem="kXd-Ku-2EV" secondAttribute="topMargin" constant="8" id="33s-Uz-wYg"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="JPN-hx-TT8" secondAttribute="bottom" constant="8" id="73Q-x6-wva"/>
@@ -99,7 +98,7 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="JPN-hx-TT8" secondAttribute="trailing" constant="8" id="mgy-p2-isE"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <connections>
                                             <outlet property="budgetAmountLabel" destination="MaS-4q-s6t" id="ULX-Dx-FVj"/>
                                             <outlet property="budgetNameLabel" destination="xZ2-sf-KYJ" id="MRB-OW-8KF"/>
@@ -147,6 +146,9 @@
         <image name="checkmark.circle" catalog="system" width="128" height="123"/>
         <image name="dollarsign" catalog="system" width="89" height="128"/>
         <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
